# serializer version: 1
# name: test_wizard
  dict({
    'num_queries': 9,
    'queries': list([
      dict({
        'origin': list([
          'SessionStore._get_session_from_db[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          SELECT "django_session"."session_key",
                 "django_session"."session_data",
                 "django_session"."expire_date"
          FROM "django_session"
          WHERE ("django_session"."expire_date" > %s
                 AND "django_session"."session_key" = %s)
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "users_user"."id",
                 "users_user"."password",
                 "users_user"."last_login",
                 "users_user"."is_superuser",
                 "users_user"."username",
                 "users_user"."first_name",
                 "users_user"."last_name",
                 "users_user"."is_staff",
                 "users_user"."is_active",
                 "users_user"."date_joined",
                 "users_user"."address_line_1",
                 "users_user"."address_line_2",
                 "users_user"."post_code",
                 "users_user"."city",
                 "users_user"."department",
                 "users_user"."coords",
                 "users_user"."geocoding_score",
                 "users_user"."geocoding_updated_at",
                 "users_user"."ban_api_resolved_address",
                 "users_user"."insee_city_id",
                 "users_user"."title",
                 "users_user"."full_name_search_vector",
                 "users_user"."email",
                 "users_user"."phone",
                 "users_user"."kind",
                 "users_user"."identity_provider",
                 "users_user"."has_completed_welcoming_tour",
                 "users_user"."created_by_id",
                 "users_user"."external_data_source_history",
                 "users_user"."last_checked_at",
                 "users_user"."public_id",
                 "users_user"."address_filled_at",
                 "users_user"."first_login"
          FROM "users_user"
          WHERE "users_user"."id" = %s
          LIMIT 21
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_companymembership"."id",
                 "companies_companymembership"."user_id",
                 "companies_companymembership"."joined_at",
                 "companies_companymembership"."is_admin",
                 "companies_companymembership"."is_active",
                 "companies_companymembership"."created_at",
                 "companies_companymembership"."updated_at",
                 "companies_companymembership"."company_id",
                 "companies_companymembership"."updated_by_id",
                 "companies_companymembership"."notifications"
          FROM "companies_companymembership"
          WHERE ("companies_companymembership"."user_id" = %s
                 AND "companies_companymembership"."is_active")
          ORDER BY "companies_companymembership"."created_at" ASC
        ''',
      }),
      dict({
        'origin': list([
          'ItouCurrentOrganizationMiddleware.__call__[utils/perms/middleware.py]',
        ]),
        'sql': '''
          SELECT "companies_company"."id",
                 "companies_company"."address_line_1",
                 "companies_company"."address_line_2",
                 "companies_company"."post_code",
                 "companies_company"."city",
                 "companies_company"."department",
                 "companies_company"."coords",
                 "companies_company"."geocoding_score",
                 "companies_company"."geocoding_updated_at",
                 "companies_company"."ban_api_resolved_address",
                 "companies_company"."insee_city_id",
                 "companies_company"."name",
                 "companies_company"."created_at",
                 "companies_company"."updated_at",
                 "companies_company"."uid",
                 "companies_company"."active_members_email_reminder_last_sent_at",
                 "companies_company"."automatic_geocoding_update",
                 "companies_company"."siret",
                 "companies_company"."naf",
                 "companies_company"."kind",
                 "companies_company"."brand",
                 "companies_company"."phone",
                 "companies_company"."email",
                 "companies_company"."auth_email",
                 "companies_company"."website",
                 "companies_company"."description",
                 "companies_company"."provided_support",
                 "companies_company"."source",
                 "companies_company"."created_by_id",
                 "companies_company"."block_job_applications",
                 "companies_company"."job_applications_blocked_at",
                 "companies_company"."convention_id",
                 "companies_company"."job_app_score",
                 "companies_company"."is_searchable",
                 "companies_company"."rdv_solidarites_id",
                 EXISTS
            (SELECT %s AS "a"
             FROM "companies_siaeconvention" U0
             WHERE (U0."deactivated_at" >= %s
                    AND U0."id" = ("companies_company"."convention_id"))
             LIMIT 1) AS "has_convention_in_grace_period",
                 "companies_siaeconvention"."id",
                 "companies_siaeconvention"."kind",
                 "companies_siaeconvention"."siret_signature",
                 "companies_siaeconvention"."is_active",
                 "companies_siaeconvention"."deactivated_at",
                 "companies_siaeconvention"."reactivated_by_id",
                 "companies_siaeconvention"."reactivated_at",
                 "companies_siaeconvention"."asp_id",
                 "companies_siaeconvention"."created_at",
                 "companies_siaeconvention"."updated_at"
          FROM "companies_company"
          INNER JOIN "companies_companymembership" ON ("companies_company"."id" = "companies_companymembership"."company_id")
          LEFT OUTER JOIN "companies_siaeconvention" ON ("companies_company"."convention_id" = "companies_siaeconvention"."id")
          WHERE (NOT ("companies_company"."siret" = %s)
                 AND "companies_companymembership"."user_id" = %s
                 AND "companies_company"."id" IN (%s)
                 AND (NOT ("companies_company"."kind" IN (%s,
                                                          %s,
                                                          %s,
                                                          %s,
                                                          %s))
                      OR "companies_company"."source" = %s
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."id" = ("companies_company"."convention_id")
                                AND U0."is_active")
                         LIMIT 1)
                      OR EXISTS
                        (SELECT %s AS "a"
                         FROM "companies_siaeconvention" U0
                         WHERE (U0."deactivated_at" >= %s
                                AND U0."id" = ("companies_company"."convention_id"))
                         LIMIT 1)))
          ORDER BY RANDOM() ASC
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Atomic.__enter__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'SAVEPOINT "<snapshot>"',
      }),
      dict({
        'origin': list([
          'Session.save[<site-packages>/django/db/models/base.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': '''
          UPDATE "django_session"
          SET "session_data" = %s,
              "expire_date" = %s
          WHERE "django_session"."session_key" = %s
        ''',
      }),
      dict({
        'origin': list([
          'Atomic.__exit__[<site-packages>/django/db/transaction.py]',
          'SessionStore.save[<site-packages>/django/contrib/sessions/backends/db.py]',
        ]),
        'sql': 'RELEASE SAVEPOINT "<snapshot>"',
      }),
    ]),
  })
# ---
# name: test_wizard[choose-approval]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-md-9">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="100" class="progress-bar progress-bar-100" role="progressbar">
                              </div>
                          </div>
                          <p>
                              <strong>Étape 2</strong>/2
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          
                              <h2>Rechercher un PASS IAE</h2>
                          
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
  
                              
                                  <p>
                                      Dans le menu déroulant ci-dessous, vous trouverez les PASS IAE du salarié selectionné à l'étape précédente.
                                      <br/>
                                      Seuls les PASS n'ayant pas encore de fiche salarié sont affichés.
                                  </p>
                              
                              <div class="form-group form-group-required"><label class="form-label" for="id_approval">PASS IAE de Jane DOE</label><select aria-describedby="id_approval_helptext" class="form-select" id="id_approval" name="approval">
    <option value="[PK of Approval]">999999999999 — Du 01/01/2000 au 01/01/3000</option>
  
  </select><div class="form-text" id="id_approval_helptext">Le PASS IAE concerné par le transfert de données vers l'Extranet IAE 2.0 de l'ASP</div>
  </div>
  
                              <div class="c-info">
                                  <span class="c-info__summary">
                                      
                                          <strong>Vous ne trouvez pas le PASS souhaité ?</strong>
                                      
                                  </span>
                                  <p class="c-info__detail mb-0">
                                      <a href="/employee_record/missing">Cliquez-ici</a> pour faire une recherche avancée parmi l’ensemble des candidats ou salariés de votre structure.
                                  </p>
                              </div>
                              <hr/>
                              
                              
                                  
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      
                      <button aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" data-bs-target="#confirm_reset_modal" data-bs-toggle="modal" type="button">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </button>
                  
              </div>
              
                  <div class="form-group col col-lg-auto order-1 order-lg-2">
                      
                          <button aria-label="Retourner à l’étape précédente" class="btn btn-block btn-outline-primary" name="wizard_goto_step" type="submit" value="/employee_record/add/[UUID of session]/choose-employee">
                              <span>Retour</span>
                          </button>
                      
                  </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" data-matomo-action="submit" data-matomo-category="fiches-salarié" data-matomo-event="true" data-matomo-option="création" type="submit">
                          <span>Confirmer</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
      <div aria-hidden="true" class="modal fade" id="confirm_reset_modal" tabindex="-1">
          <div class="modal-dialog modal-dialog-centered">
              <div class="modal-content">
                  <div class="modal-header">
                      <h3 class="modal-title">Êtes-vous sûr de vouloir annuler ?</h3>
                  </div>
                  <div class="modal-body">
                      Les informations renseignées ne seront pas enregistrées.
                      <br/>
                      Cette action est irréversible.
                  </div>
                  <div class="modal-footer">
                      <button class="btn btn-sm btn-outline-primary" data-bs-dismiss="modal" type="button">Retour</button>
                      
                          <a class="btn btn-sm btn-danger" href="/employee_record/list">Confirmer l'annulation</a>
                      
                  </div>
              </div>
          </div>
      </div>
  
  
                              
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
# name: test_wizard[choose-employee]
  '''
  <section class="s-section">
          <div class="s-section__container container">
              <div class="row">
                  <div class="col-12 col-md-9">
                      <div class="c-stepper mb-3 mb-lg-5">
                          <div class="progress">
                              <div aria-valuemax="100" aria-valuemin="0" aria-valuenow="50" class="progress-bar progress-bar-50" role="progressbar">
                              </div>
                          </div>
                          <p>
                              <strong>Étape 1</strong>/2
                          </p>
                      </div>
                      <div class="c-form mb-3 mb-lg-5">
                          
                              <h2>Rechercher un salarié</h2>
                          
                          <form method="post">
                              <input name="csrfmiddlewaretoken" type="hidden" value="NORMALIZED_CSRF_TOKEN"/>
  
                              
                                  <p>
                                      Dans le menu déroulant ci-dessous, vous trouverez la liste de vos salariés qui n'ont pas encore de fiche salarié.
                                  </p>
                              
                              <div class="form-group form-group-required"><label class="form-label" for="id_employee">Nom du salarié</label><select aria-describedby="id_employee_helptext" class="form-select django-select2" data-allow-clear="false" data-minimum-input-length="0" data-theme="bootstrap-5" id="id_employee" lang="fr" name="employee" required="">
    <option selected="" value="">Sélectionnez le salarié</option>
  
    <option value="[PK of job seeker]">Jane DOE</option>
  
  </select><div class="form-text" id="id_employee_helptext">Le salarié concerné par le transfert de données vers l'Extranet IAE 2.0 de l'ASP</div>
  </div>
  
                              <div class="c-info">
                                  <span class="c-info__summary">
                                      
                                          <strong>Vous ne trouvez pas votre salarié ?</strong>
                                      
                                  </span>
                                  <p class="c-info__detail mb-0">
                                      <a href="/employee_record/missing">Cliquez-ici</a> pour faire une recherche avancée parmi l’ensemble des candidats ou salariés de votre structure.
                                  </p>
                              </div>
                              <hr/>
                              
                              
                                  
  
  <div class="row">
      <div class="col-12">
          <hr class="mb-3"/>
          <small class="d-inline-block mb-3">* champs obligatoires</small>
          <div class="form-row align-items-center justify-content-end gx-3">
              <div class="form-group col-12 col-lg order-3 order-lg-1">
                  
                      <a aria-label="Annuler la saisie de ce formulaire" class="btn btn-link btn-ico ps-lg-0 w-100 w-lg-auto" href="/employee_record/list">
                          <i aria-hidden="true" class="ri-close-line ri-lg"></i>
                          <span>Annuler</span>
                      </a>
                  
              </div>
              
              <div class="form-group col col-lg-auto order-2 order-lg-3">
                  
                      <button aria-label="Passer à l’étape suivante" class="btn btn-block btn-primary" type="submit">
                          <span>Suivant</span>
                      </button>
                  
              </div>
          </div>
      </div>
  </div>
  
  
  
                              
                          </form>
                      </div>
                  </div>
              </div>
          </div>
      </section>
  '''
# ---
